--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 .Ruserdata
 data/WVS_TimeSeries_R_v1_6.rds
 #data/merged_data.csv
+.RDataTmp
+.DS_Store
+`.NDI Regressions.md`
+`.NDI Regressions.py`
 
 # Example code in package build process
 *-Ex.R
