--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data/WVS_TimeSeries_R_v1_6.rds
 #data/merged_data.csv
 .RDataTmp
 .DS_Store
+.policy_lab_ndi.Rproj
 '.NDI Regressions.md'
 '.NDI Regressions.py'
 
