--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ data/WVS_TimeSeries_R_v1_6.rds
 .RDataTmp
 .DS_Store
 policy_lab_ndi.Rproj
-NDI*Regressions.md`
-NDI*Regressions.py`
+NDI*Regressions.md
+NDI*Regressions.py
 
 # Example code in package build process
 *-Ex.R
